"postinstall": "gulp build"

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   "scripts": {
     "test": "gulp travis",
     "publish-please": "del-cli package-lock.json node_modules && npm i && publish-please",
-    "prepublishOnly": "publish-please guard"
+    "prepublishOnly": "publish-please guard",
+    "postinstall": "gulp build"
   },
   "dependencies": {
     "@types/node": "^10.12.19",
